added button functionality

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 
 <body>
 	<div class="container">
-		<div class="jumbotron jumbotron-fluid">
+		<div class="jumbotron jumbotron-fluid" id="buttons">
 			<p>Buttons</p>
 		</div>
-			<div class="col-8">
+			<div class="col-8" id="gifs">
 				<p>Gifs</p>		
 			</div>
-			<div class="col-4">
-				<p>Form</p>
+			<div class="col-4" id="form">
+				<form id="topic-form">
+					<label for="topic-input">Add a Topic:</label>
+					<input type="text" id="topic-input">
+					<br><br>
+					<!-- Button triggers new movie to be added -->
+					<input id="add-topic" type="submit" value="Add a Topic">
+				</form>
 			</div>
 	</div>
 </body>
