gifs now display

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 		<div class="jumbotron jumbotron-fluid" id="buttons">
 			<p>Buttons</p>
 		</div>
-			<div class="col-8" id="gifs">
-				<p>Gifs</p>		
-			</div>
+			<div class="col-8" id="gifs"></div>
 			<div class="col-4" id="form">
 				<form id="topic-form">
 					<label for="topic-input">Add a Topic:</label>
