still need to figure out the animation part of the gifs

--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 
 <body>
 	<div class="container">
-		<div class="jumbotron jumbotron-fluid" id="buttons">
-			<p>Buttons</p>
-		</div>
+		<div class="jumbotron jumbotron-fluid" id="buttons"></div>
 			<div class="col-8" id="gifs"></div>
 			<div class="col-4" id="form">
 				<form id="topic-form">
-					<label for="topic-input">Add a Topic:</label>
+					<label for="topic-input">Add a Sport:</label>
 					<input type="text" id="topic-input">
 					<br><br>
 					<!-- Button triggers new movie to be added -->
-					<input id="add-topic" type="submit" value="Add a Topic">
+					<input id="add-topic" type="submit" value="Submit">
 				</form>
 			</div>
 	</div>
